--- a/environment.yml
+++ b/environment.yml
@@ -20,21 +20,4 @@ steps:
 
 - powershell: ./install-iqsharp.ps1
   displayName: "Installing IQ#"
-  workingDirectory: $(System.DefaultWorkingDirectory)/scripts
-
-##
-# Build, test & pack
-##
-- powershell: ./build.ps1
-  displayName: "Building"
-  workingDirectory: $(System.DefaultWorkingDirectory)/scripts
-
-- powershell: ./test.ps1
-  displayName: "Testing"
-  workingDirectory: $(System.DefaultWorkingDirectory)/scripts
-  condition: and(succeeded(), ne(variables['Skip.Tests'], 'true'))
-
-- powershell: ./pack.ps1
-  displayName: "Packing"
-  workingDirectory: $(System.DefaultWorkingDirectory)/scripts
-
+  workingDirectory: .
